# LibrarySystem

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LibrarySystem.slnx  README.md  main.cpp
LibrarySystem/: LibrarySystem.vcxproj  main.cpp
app/: AppManager.cpp  AppManager.h  CMakeLists.txt  SessionManager.cpp  SessionManager.h
common/: CMakeLists.txt
common/utils/: Logger.cpp  Logger.h  Time.cpp  Time.h
controller/: CMakeLists.txt
controller/auth/: AuthController.cpp  AuthController.h
controller/book/: BookController.cpp  BookController.h
controller/borrow/: BorrowController.cpp  BorrowController.h
controller/user/: UserController.cpp  UserController.h
database/: CMakeLists.txt  SQLiteDatabase.cpp  SQLiteDatabase.h
docs/: Roadmap.md
dto/: BookDTO.h  CMakeLists.txt  UserDTO.h
include/: Book.h  Library.h  LibraryService.h  MainWindow.h  UIController.h  User.h  UserDTO.h
include/app/: AppManager.h
include/auth/: Session.h  SessionManager.h
include/database/: SQLiteBookRepository.h
include/domain/: Book.h  BorrowRecord.h  Library.h  User.h
include/dto/: BookDTO.h  BorrowRecordDTO.h  UserDTO.h
include/mapper/: BookMapper.h  BorrowRecordMapper.h  UserMapper.h
include/repository/SQLite/: SQLiteBookRepository.h  SQLiteBorrowRecordRepository.h  SQLiteUserRepository.h
include/repository/interfaces/: IBookRepository.h  IBorrowRecordRepository.h  IUserRepository.h
include/repository/memory/: InMemoryBookRepository.h  InMemoryBorrowRecordRepository.h  InMemoryUserRepository.h
include/service/: LibraryService.h
include/ui/: LoginWindow.h  MainWindow.h  UIController.h
include/ui/pages/: BookPage.h
mapper/: BookMapper.cpp  BookMapper.h  BorrowRecordMapper.cpp  BorrowRecordMapper.h  CMakeLists.txt  UserMapper.cpp  UserMapper.h
model/: Book.cpp  Book.h  BorrowRecord.cpp  BorrowRecord.h  CMakeLists.txt  Role.h  User.cpp  User.h
repository/: CMakeLists.txt
repository/SQLite/: SQLiteBookRepository.cpp  SQLiteBookRepository.h  SQLiteBorrowRecordRepository.cpp  SQLiteBorrowRecordRepository.h  SQLiteUserRepository.cpp  SQLiteUserRepository.h
repository/interfaces/: IBookRepository.h  IBorrowRecordRepository.h  IUserRepository.h
service/: CMakeLists.txt  LibraryService.cpp  LibraryService.h
service/auth/: AuthService.cpp  AuthService.h
service/book/: BookService.cpp  BookService.h
service/borrowRecord/: BorrowService.cpp  BorrowService.h
service/statistics/: StatisticsService.cpp  StatisticsService.h
service/user/: UserService.cpp  UserService.h
src/: Book.cpp  Library.cpp  LibraryService.cpp  MainWindow.cpp  UIController.cpp  User.cpp  main.cpp
src/app/: AppManager.cpp
src/auth/: SessionManager.cpp
src/database/: SQLiteBookRepository.cpp  SQLiteDatabase.cpp
src/domain/: Book.cpp  BorrowRecord.cpp  Library.cpp  User.cpp
src/mapper/: BookMapper.cpp  BorrowRecordMapper.cpp  UserMapper.cpp
src/repository/SQLite/: SQLiteBookRepository.cpp  SQLiteBorrowRecordRepository.cpp  SQLiteDatabase.cpp  SQLiteUserRespository.cpp
src/service/: LibraryService.cpp
src/ui/: LoginWindow.cpp  MainWindow.cpp  UIController.cpp
src/ui/pages/: BookPage.cpp
src/utils/: Logger.cpp  Time.cpp
ui/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  MainWindow.cpp  MainWindow.h  UIController.cpp  UIController.h
ui/dialogs/: BookEditDialog.cpp  BookEditDialog.h
ui/pages/: BookPage.cpp  BookPage.h  BorrowRecordPage.cpp  BorrowRecordPage.h  UserPage.cpp  UserPage.h
